# cnm_speed_rs

./: .gitignore  Cargo.toml  LICENSE
data/: settings.json
scripts/: tag.py
src/: main.rs
src/app/: logging.rs  mod.rs  settings.rs  types.rs
src/source/: cmcc.rs  cmcc_types.rs  mod.rs
src/speedtest/: api.rs  mod.rs  types.rs
src/tui/: components.rs  io.rs  mod.rs  mouse.rs  render.rs  settings.rs  state.rs  types.rs
src/utils/: crypto.rs  format.rs  mod.rs  stats.rs  trend.rs
