[package]
name = "cnm_speed_rs"
version = "0.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
des = "0.8"
cbc = "0.1"
aes = "0.8"
ecb = "0.1"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
rand = "0.10"
urlencoding = "2.1"
tui-input = { version = "0.11", default-features = false, features = ["crossterm"] }
throbber-widgets-tui = "0.8"
anyhow = "1.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
tokio = { version = "1.43", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "stream"] }
async-trait = "0.1"
fs2 = "0.4"
futures = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1.10"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = { version = "3.6", default-features = false }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
